--- a/pascoa-api/src/main/resources/application.properties
+++ b/pascoa-api/src/main/resources/application.properties
@@ -6,4 +6,16 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+
+# Spring geral
+spring.main.banner-mode=off
+
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+
+# JDBC / SQL (caso esteja ativado)
+logging.level.org.hibernate.SQL=OFF
+
+logging.level.br.com.felipe.pascoaapi.pascoa_api.controller.PascoaController=INFO
