--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=true
+
 # Spring geral
 spring.main.banner-mode=off
 
